@@ -2,12 +2,17 @@ package br.com.vemser.devlandapi.service;
 
 import br.com.vemser.devlandapi.dto.ContatoCreateDTO;
 import br.com.vemser.devlandapi.dto.ContatoDTO;
-import br.com.vemser.devlandapi.entity.Contato;
+import br.com.vemser.devlandapi.dto.PageDTO;
+import br.com.vemser.devlandapi.entity.ContatoEntity;
+import br.com.vemser.devlandapi.entity.UsuarioEntity;
 import br.com.vemser.devlandapi.exceptions.RegraDeNegocioException;
 import br.com.vemser.devlandapi.repository.ContatoRepository;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -26,58 +31,110 @@ public class ContatoService {
     @Autowired
     private UsuarioService usuarioService;
 
-    public List<ContatoDTO> listar() throws RegraDeNegocioException {
-        if (contatoRepository.listar().size() == 0) {
-            throw new RegraDeNegocioException("Nenhum contato encontrado");
-        } else {
-            return contatoRepository.listar().stream()
-                    .map(contato -> objectMapper.convertValue(contato, ContatoDTO.class))
-                    .collect(Collectors.toList());
-        }
+
+    //==================================================================================================================
+    //LISTAR TUDO - PAGINADO
+
+    public PageDTO<ContatoDTO> listarPaginado(Integer pagina,
+                                              Integer registroPorPagina) {
+        Pageable pageable = PageRequest.of(pagina, registroPorPagina);
+        Page<ContatoEntity> page = contatoRepository.findAll(pageable);
+
+        List<ContatoDTO> contatoDTOS = page.getContent().stream()
+                .map(this::retornarContatoDTO)
+                .toList();
+
+        return new PageDTO<>(page.getTotalElements(), page.getTotalPages(), pagina, registroPorPagina, contatoDTOS);
     }
 
-    public List<ContatoDTO> listarContato(Integer id) throws RegraDeNegocioException {
+    //==================================================================================================================
+    //LIST CONTATO POR ID
+
+    public List<ContatoDTO> listarContatoPorId(Integer id) throws RegraDeNegocioException {
         localizarContato(id);
-        return contatoRepository.listarContato(id).stream()
+        return contatoRepository.findById(id).stream()
                 .filter(contato -> contato.getIdContato().equals(id))
-                .map(contato -> objectMapper.convertValue(contato, ContatoDTO.class))
+                .map(this::retornarContatoDTO)//converte dto através de método
                 .collect(Collectors.toList());
     }
+
+    //==================================================================================================================
+    //LIST CONTATO USUÁRIO
 
     public List<ContatoDTO> listarContatoUsuario(Integer id) throws RegraDeNegocioException {
         usuarioService.localizarUsuario(id);
-        return contatoRepository.listarContatoUsuario(id).stream()
+        return contatoRepository.findAll().stream()
                 .filter(contato -> contato.getIdUsuario().equals(id))
-                .map(contato -> objectMapper.convertValue(contato, ContatoDTO.class))
+                .map(this::retornarContatoDTO)
                 .collect(Collectors.toList());
     }
 
-    public ContatoCreateDTO adicionar(Integer id, ContatoCreateDTO contato) throws RegraDeNegocioException {
-        usuarioService.localizarUsuario(id);
-        Contato idContato = contatoRepository.adicionar(id, objectMapper.convertValue(contato, Contato.class));
-        return objectMapper.convertValue(idContato, ContatoDTO.class);
+    //==================================================================================================================
+    //ADICIONAR
+
+    public ContatoCreateDTO adicionar(Integer id, ContatoCreateDTO contatoDTO) throws RegraDeNegocioException {
+        //recupera usuário
+        UsuarioEntity usuarioRecuperado = usuarioService.localizarUsuario(id);
+
+        //converte
+        ContatoEntity contatoEntity = retornarContatoEntity(contatoDTO);
+
+        //seta no usuário
+        contatoEntity.setUsuario(usuarioRecuperado);
+
+        ContatoEntity contatoCriado = contatoRepository.save(contatoEntity);
+
+        return retornarContatoDTO(contatoCriado);
     }
+
+    //==================================================================================================================
+    //EDITAR
 
     public ContatoDTO editar(Integer id,
                              ContatoDTO contatoDTO) throws RegraDeNegocioException {
-        Contato contatoRecuperado = localizarContato(id);
-        contatoDTO.setIdUsuario(contatoRecuperado.getIdUsuario());
+        ContatoEntity contatoRecuperado = localizarContato(id);
 
-        contatoRecuperado = contatoRepository.editar(id, objectMapper.convertValue(contatoDTO, Contato.class));
-        contatoDTO =  objectMapper.convertValue(contatoRecuperado, ContatoDTO.class);
-        return contatoDTO;
+        UsuarioEntity usuarioRecuperado = usuarioService.localizarUsuario(contatoDTO.getIdUsuario());
+
+        contatoRecuperado.setTipo(contatoDTO.getTipo());
+        contatoRecuperado.setNumero(contatoDTO.getNumero());
+        contatoRecuperado.setDescricao(contatoDTO.getDescricao());
+        contatoRecuperado.setUsuario(usuarioRecuperado);
+
+        return retornarContatoDTO(contatoRepository.save(contatoRecuperado));
     }
 
+    //==================================================================================================================
+    //EXCLUIR
     public void remover(Integer id) throws RegraDeNegocioException {
-        localizarContato(id);
-        contatoRepository.remover(id);
+
+        ContatoEntity contatoEntityRecuperado = localizarContato(id);
+        UsuarioEntity usuarioRecuperado = usuarioService.localizarUsuario(contatoEntityRecuperado.getIdUsuario());
+
+        // log
+        contatoRepository.delete(contatoEntityRecuperado);
     }
 
-    public Contato localizarContato (Integer idContato) throws RegraDeNegocioException {
-        Contato contatoRecuperado = contatoRepository.listar().stream()
+    //==================================================================================================================
+    //MÉTODOS AUXILIARES
+
+    //LOCALIZAR CONTATO
+    public ContatoEntity localizarContato(Integer idContato) throws RegraDeNegocioException {
+        ContatoEntity contatoRecuperado = contatoRepository.findById(idContato).stream()
                 .filter(contato -> contato.getIdContato().equals(idContato))
                 .findFirst()
                 .orElseThrow(() -> new RegraDeNegocioException("Contato não encontrado"));
         return contatoRecuperado;
     }
+
+    //DTO PARA ENTITY
+    public ContatoEntity retornarContatoEntity(ContatoCreateDTO contatoCreateDTO) {
+        return objectMapper.convertValue(contatoCreateDTO, ContatoEntity.class);
+    }
+
+    //ENTITY PARA DTO
+    public ContatoDTO retornarContatoDTO(ContatoEntity contato) {
+        return objectMapper.convertValue(contato, ContatoDTO.class);
+    }
+
 }
